--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,13 @@
             "email": "coucou@jolicode.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Joli\\SlackSecretSanta\\": "src/"
+        }
+    },
     "require": {
-        "bramdevries/oauth2-slack": "^0.1.0"
+        "bramdevries/oauth2-slack": "^0.1.0",
+        "cleentfaar/slack": "^0.17.1"
     }
 }
