--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require": {
         "bramdevries/oauth2-slack": "^0.1.0",
-        "cleentfaar/slack": "^0.17.1"
+        "cleentfaar/slack": "^0.17.1",
+        "symfony/symfony": "2.8.x@dev"
     }
 }
