--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "bramdevries/oauth2-slack": "^0.1.0",
         "cleentfaar/slack": "^0.17.1",
-        "symfony/symfony": "2.8.x@dev"
+        "symfony/symfony": "2.8.x@dev",
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0",
