--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     },
     "require": {
-        "bramdevries/oauth2-slack": "^0.1.0",
-        "cleentfaar/slack": "^0.17.1",
-        "symfony/symfony": "2.8.x@beta",
+        "bramdevries/oauth2-slack": "~0.1.0",
+        "cleentfaar/slack": "~0.17",
+        "symfony/symfony": "~3.1",
         "predis/predis": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0",
-        "fabpot/php-cs-fixer": "^1.10"
+        "friendsofphp/php-cs-fixer": "^1.9.3"
     },
     "config": {
         "bin-dir": "bin"
