Update to SF 3.3 and setup Symfony Flex

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+###> symfony/framework-bundle ###
+.env
+/var/
 /vendor/
-/var/*
-/bin/php-cs-fixer
-/bin/phpunit
+/web/bundles/
+###< symfony/framework-bundle ###
+###> symfony/phpunit-bridge ###
+/phpunit.xml
+###< symfony/phpunit-bridge ###
