--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,13 @@
     },
     "require": {
         "php": "^7.1.3",
-        "bramdevries/oauth2-slack": "~0.1.0",
+        "adam-paterson/oauth2-slack": "^1.1.3",
         "cleentfaar/slack": "~0.17",
         "predis/predis": "^1.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.3",
         "symfony/twig-bundle": "^3.3",
-        "symfony/yaml": "^3.3",
-        "ircmaxell/random-lib": "~1.2"
+        "symfony/yaml": "^3.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.9.3",
