--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "predis/predis": "^1.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.3",
+        "symfony/monolog-bundle": "^3.1",
         "symfony/twig-bundle": "^3.3",
         "symfony/yaml": "^3.3"
     },
