Automatically send way to retrieve the repartition at any time

--- a/etc/routing/app.yaml
+++ b/etc/routing/app.yaml
@@ -10,10 +10,6 @@ finish:
     path:     /finish/{hash}
     defaults: { _controller: Joli\SlackSecretSanta\Controller\SantaController:finish }
 
-summary:
-    path:     /summary/{hash}
-    defaults: { _controller: Joli\SlackSecretSanta\Controller\SantaController:summary }
-
 retry:
     path:     /retry/{hash}
     defaults: { _controller: Joli\SlackSecretSanta\Controller\SantaController:retry }
@@ -21,3 +17,7 @@ retry:
 authenticate:
     path:     /auth
     defaults: { _controller: Joli\SlackSecretSanta\Controller\SantaController:authenticate }
+
+spoil:
+    path:     /spoil
+    defaults: { _controller: Joli\SlackSecretSanta\Controller\SantaController:spoil }
