--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .env
 /var/
 /vendor/
-/web/bundles/
+/public/bundles/
 ###< symfony/framework-bundle ###
 ###> symfony/phpunit-bridge ###
 /phpunit.xml
