--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,10 @@ homepage:
     path:     /
     defaults: { _controller: Joli\SlackSecretSanta\Controller\ContentController:homepage }
 
+hall_of_fame:
+    path:     /hall-of-fame
+    defaults: { _controller: Joli\SlackSecretSanta\Controller\ContentController:hallOfFame }
+
 run:
     path:     /run
     defaults: { _controller: Joli\SlackSecretSanta\Controller\SantaController:run }
