--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,9 +1,9 @@
 framework:
     secret: '%env(APP_SECRET)%'
     #default_locale: en
-    #csrf_protection: null
+    #csrf_protection: ~
     #http_method_override: true
-    #trusted_hosts: null
+    #trusted_hosts: ~
     # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
     session:
         handler_id: session.handler.predis
@@ -12,3 +12,5 @@ framework:
     #fragments: ~
     php_errors:
         log: true
+    assets:
+        version: 'v1'
