Update all the things

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,20 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
 ###> symfony/phpunit-bridge ###
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> friendsofphp/php-cs-fixer ###
+.php_cs
+.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
