--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,13 +20,12 @@ services:
         resource: '../src/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../src/{Entity,Repository,Tests}'
+        exclude: '../src/{Entity,Migrations,Repository,Tests}'
 
-    # controllers are imported separately to make sure they're public
-    # and have a tag that allows actions to type-hint services
+    # controllers are imported separately to make sure they
+    # have the tag that allows actions to type-hint services
     Joli\SlackSecretSanta\Controller\:
         resource: '../src/Controller'
-        public: true
         tags: ['controller.service_arguments']
 
     # add more services, or override services that need manual wiring
