--- a/composer.json
+++ b/composer.json
@@ -21,22 +21,22 @@
         "php": "^7.1.3",
         "adam-paterson/oauth2-slack": "^1.1.3",
         "cleentfaar/slack": "~0.17",
-        "predis/predis": "^1.0",
-        "symfony/asset": "^3.3",
-        "symfony/flex": "^1.0.11",
-        "symfony/framework-bundle": "^3.3",
+        "predis/predis": "^1.1",
+        "symfony/asset": "^3.4",
+        "symfony/flex": "^1.0.56",
+        "symfony/framework-bundle": "^3.4",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/twig-bundle": "^3.3",
-        "symfony/yaml": "^3.3"
+        "symfony/twig-bundle": "^3.4",
+        "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.3",
-        "phpunit/phpunit": "^6.2",
-        "symfony/browser-kit": "^3.3",
-        "symfony/css-selector": "^3.3",
-        "symfony/dotenv": "^3.3",
-        "symfony/phpunit-bridge": "^3.3",
-        "symfony/profiler-pack": "^1.0"
+        "friendsofphp/php-cs-fixer": "^2.8",
+        "symfony/browser-kit": "^3.4",
+        "symfony/css-selector": "^3.4",
+        "symfony/dotenv": "^3.4",
+        "symfony/phpunit-bridge": "^3.4",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/web-server-bundle": "^3.4"
     },
     "config": {
         "preferred-install": {
@@ -46,7 +46,8 @@
     },
     "scripts": {
         "auto-scripts": {
-            "make cache-warmup": "script"
+            "cache:clear": "symfony-cmd",
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
