--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ env:
 install:
     - composer install --prefer-dist;
 
-
-
 script:
     - vendor/bin/phpunit
     - vendor/bin/php-cs-fixer fix --config=.php_cs --dry-run --diff
+
+branches:
+    only:
+        - master
