Add dependency on symfony/console

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "cleentfaar/slack": "~0.20",
         "predis/predis": "^1.1",
         "symfony/asset": "^3.4",
+        "symfony/console": "^3.4",
         "symfony/flex": "^1.0.78",
         "symfony/framework-bundle": "^3.4",
         "symfony/monolog-bundle": "^3.2",
