Add support for Discord
Also:
- add missing Twig block in the run page
- add new screenshots for private messages samples
- updates Font Awesome to get icon for Discord
- export message dispatching in its own class, not coupled to Slack anymore

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,9 @@
 
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_BOT_TOKEN=
 REDIS_URL=
 
 ###> symfony/framework-bundle ###
