--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,15 @@
         "adam-paterson/oauth2-slack": "^1.1.3",
         "cleentfaar/slack": "~0.20",
         "predis/predis": "^1.1",
+        "restcord/restcord": "^0.2.2",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0.78",
         "symfony/framework-bundle": "^3.4",
         "symfony/monolog-bundle": "^3.2",
         "symfony/twig-bundle": "^3.4",
-        "symfony/yaml": "^3.4"
+        "symfony/yaml": "^3.4",
+        "wohali/oauth2-discord-new": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.11",
