WIP On the Microsoft Teams support
TL;DR: I have an OAuth access, but you can't do much with it.
I created an app on the Teams system and a Bot,
but you can't do the same flow as other apps.

Maybe the solution could be to use a "Tab".

--- a/.env.dist
+++ b/.env.dist
@@ -10,6 +10,8 @@ DISCORD_BOT_TOKEN=
 
 # default `redis://localhost:6379`
 REDIS_URL=
+TEAMS_CLIENT_ID=
+TEAMS_CLIENT_SECRET=
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
