--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -29,3 +29,12 @@ slack_authenticate:
 discord_authenticate:
     path:     /auth/discord
     defaults: { _controller: JoliCode\SecretSanta\Controller\DiscordController:authenticate }
+
+teams_authenticate:
+    path:     /auth/teams
+    defaults: { _controller: JoliCode\SecretSanta\Controller\TeamsController:authenticate }
+
+# todo maybe not used
+teams_incoming_bot:
+    path:     /teams/incoming_bot
+    defaults: { _controller: JoliCode\SecretSanta\Controller\TeamsController:incomingBot }
