--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/monolog-bundle": "^3.2",
         "symfony/twig-bundle": "^3.4",
         "symfony/yaml": "^3.4",
+        "thenetworg/oauth2-azure": "^1.3",
         "wohali/oauth2-discord-new": "^1.0"
     },
     "require-dev": {
