Updating the README and adding new hosting provider sponsor to footer

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,8 @@ SLACK_CLIENT_SECRET=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_BOT_TOKEN=
+
+# default `redis://localhost:6379`
 REDIS_URL=
 
 ###> symfony/framework-bundle ###
