--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -3,13 +3,12 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: nested
+            handler: syslog
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
-        nested:
-            type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
+        syslog:
+            type: syslog
             level: debug
         console:
             type:   console
