--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,7 +16,7 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    Joli\SlackSecretSanta\:
+    JoliCode\SecretSanta\:
         resource: '../src/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
@@ -24,32 +24,32 @@ services:
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
-    Joli\SlackSecretSanta\Controller\:
+    JoliCode\SecretSanta\Controller\:
         resource: '../src/Controller'
         public: true
         tags: ['controller.service_arguments']
 
     # add more services, or override services that need manual wiring
-    Joli\SlackSecretSanta\Controller\SantaController:
+    JoliCode\SecretSanta\Controller\SantaController:
         public: true
         arguments:
             $applications:
-                - '@Joli\SlackSecretSanta\Application\SlackApplication'
-                - '@Joli\SlackSecretSanta\Application\DiscordApplication'
+                - '@JoliCode\SecretSanta\Application\SlackApplication'
+                - '@JoliCode\SecretSanta\Application\DiscordApplication'
 
-    Joli\SlackSecretSanta\Controller\SlackController:
+    JoliCode\SecretSanta\Controller\SlackController:
         public: true
         arguments:
             $slackClientId: '%env(SLACK_CLIENT_ID)%'
             $slackClientSecret: '%env(SLACK_CLIENT_SECRET)%'
 
-    Joli\SlackSecretSanta\Controller\DiscordController:
+    JoliCode\SecretSanta\Controller\DiscordController:
         public: true
         arguments:
             $discordClientId: '%env(DISCORD_CLIENT_ID)%'
             $discordClientSecret: '%env(DISCORD_CLIENT_SECRET)%'
 
-    Joli\SlackSecretSanta\Discord\DiscordService:
+    JoliCode\SecretSanta\Discord\DiscordService:
         public: true
         arguments:
             $discordBotToken: '%env(DISCORD_BOT_TOKEN)%'
