--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,7 +18,7 @@ DirectoryIndex index.php
 </IfModule>
 
 <IfModule mod_headers.c>
-    Header set Content-Security-Policy "default-src 'self'"
+    Header set Content-Security-Policy "default-src 'self'; base-uri 'self';"
     Header always set X-Content-Type-Options "nosniff"
     Header always set X-XSS-Protection "1; mode=block"
     Header always set X-Frame-Options "DENY"
