Make Teams support hopefully working

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -30,10 +30,14 @@ discord_authenticate:
     path:     /auth/discord
     defaults: { _controller: JoliCode\SecretSanta\Controller\DiscordController:authenticate }
 
-teams_authenticate:
-    path:     /auth/teams
-    defaults: { _controller: JoliCode\SecretSanta\Controller\TeamsController:authenticate }
+teams_start:
+    path:     /teams/start
+    defaults: { _controller: JoliCode\SecretSanta\Controller\TeamsController:start }
 
 teams_incoming_bot:
     path:     /teams/incoming_bot
     defaults: { _controller: JoliCode\SecretSanta\Controller\TeamsController:incomingBot }
+
+teams_init:
+    path:     /teams/init/{id}
+    defaults: { _controller: JoliCode\SecretSanta\Controller\TeamsController:init }
