Configure base-uri in CSP

--- a/config/packages/nelmio_security.yaml
+++ b/config/packages/nelmio_security.yaml
@@ -42,5 +42,7 @@ nelmio_security:
                 - 'unsafe-inline'
             img-src:
                 - '*'
+            base-uri:
+                - 'self'
             block-all-mixed-content: true # defaults to false, blocks HTTP content over HTTPS transport
             # upgrade-insecure-requests: true # defaults to false, upgrades HTTP requests to HTTPS transport
