--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,6 +37,9 @@ services:
                 - '@JoliCode\SecretSanta\Application\SlackApplication'
                 - '@JoliCode\SecretSanta\Application\DiscordApplication'
 
+    Jolicode\SecretSanta\Statistics:
+            public: true
+
     JoliCode\SecretSanta\Controller\SlackController:
         public: true
         arguments:
