adding bugsnag logging

--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,6 @@ REDIS_URL=
 APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
 ###< symfony/framework-bundle ###
+
+BUGSNAG=
+BUGSNAG_STAGE=development
