--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php": "^7.1.3",
         "adam-paterson/oauth2-slack": "^1.1.3",
+        "bugsnag/bugsnag-symfony": "^1.5",
         "cleentfaar/slack": "~0.20",
         "nelmio/security-bundle": "^2.5",
         "predis/predis": "^1.1",
