--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
     "require": {
         "php": "^7.1.3",
         "adam-paterson/oauth2-slack": "^1.1.3",
-        "cleentfaar/slack": "~0.20",
+        "guzzlehttp/psr7": "^1.4",
+        "jolicode/slack-php-api": "dev-master",
         "nelmio/security-bundle": "^2.5",
+        "php-http/curl-client": "^1.7",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.2.2",
         "symfony/asset": "^3.4",
