--- a/.env.dist
+++ b/.env.dist
@@ -11,10 +11,10 @@ DISCORD_BOT_TOKEN=
 # default `redis://localhost:6379`
 REDIS_URL=
 
+BUGSNAG_KEY=
+BUGSNAG_STAGE=development
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
 ###< symfony/framework-bundle ###
-
-BUGSNAG=
-BUGSNAG_STAGE=development
