Add a way to try private message before final draw

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -22,6 +22,10 @@ run:
     path:     /run/{application}
     defaults: { _controller: JoliCode\SecretSanta\Controller\SantaController::run }
 
+send_sample_message:
+    path:     /sample-message/{application}
+    defaults: { _controller: JoliCode\SecretSanta\Controller\SantaController::sendSampleMessage }
+
 finish:
     path:     /finish/{hash}
     defaults: { _controller: JoliCode\SecretSanta\Controller\SantaController::finish }
