--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "adam-paterson/oauth2-slack": "^1.1.3",
         "bugsnag/bugsnag-symfony": "^1.5",
         "guzzlehttp/psr7": "^1.4",
-        "jolicode/slack-php-api": "1.0",
+        "jolicode/slack-php-api": "^1.0",
         "nelmio/security-bundle": "^2.5",
         "php-http/curl-client": "^1.7",
         "predis/predis": "^1.1",
