--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,8 @@
         "adam-paterson/oauth2-slack": "^1.1.3",
         "bugsnag/bugsnag-symfony": "^1.5",
         "guzzlehttp/psr7": "^1.4",
-        "jolicode/slack-php-api": "^1.0",
+        "jolicode/slack-php-api": "^2.1",
         "nelmio/security-bundle": "^2.5",
-        "php-http/curl-client": "^1.7",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.3",
         "sensio/framework-extra-bundle": "^5.2",
@@ -32,6 +31,7 @@
         "symfony/console": "^4.1",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "^4.1",
+        "symfony/http-client": "^4.3",
         "symfony/monolog-bundle": "^3.3",
         "symfony/twig-bundle": "^4.1",
         "symfony/yaml": "^4.1",
