--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "php": "^7.1.3",
         "adam-paterson/oauth2-slack": "^1.1.3",
         "bugsnag/bugsnag-symfony": "^1.5",
-        "guzzlehttp/psr7": "^1.4",
         "jolicode/slack-php-api": "^2.1",
         "nelmio/security-bundle": "^2.5",
+        "nyholm/psr7": "^1.2",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.3",
         "sensio/framework-extra-bundle": "^5.2",
