--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "jolicode/secret-santa",
     "license": "MIT",
-"minimum-stability": "beta",
     "authors": [
         {
             "name": "JoliCode",
@@ -28,26 +27,26 @@
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.3",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "^4.4@beta",
-        "symfony/console": "^4.4@beta",
+        "symfony/asset": "^4.4",
+        "symfony/console": "^4.4",
         "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "^4.4@beta",
-        "symfony/http-client": "^4.4@beta",
+        "symfony/framework-bundle": "^4.4",
+        "symfony/http-client": "^4.4",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/twig-bundle": "^4.4@beta",
+        "symfony/twig-bundle": "^4.4",
         "twig/twig": "^2.12",
-        "symfony/yaml": "^4.4@beta",
+        "symfony/yaml": "^4.4",
         "wohali/oauth2-discord-new": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
-        "symfony/browser-kit": "^4.4@beta",
-        "symfony/css-selector": "^4.4@beta",
-        "symfony/dotenv": "^4.4@beta",
-        "symfony/phpunit-bridge": "^4.4@beta",
-        "symfony/stopwatch": "^4.4@beta",
-        "symfony/web-profiler-bundle": "^4.4@beta",
-        "symfony/web-server-bundle": "~4.4@beta"
+        "symfony/browser-kit": "^4.4",
+        "symfony/css-selector": "^4.4",
+        "symfony/dotenv": "^4.4",
+        "symfony/phpunit-bridge": "^4.4",
+        "symfony/stopwatch": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4",
+        "symfony/web-server-bundle": "~4.4"
     },
     "config": {
         "preferred-install": {
