--- a/composer.json
+++ b/composer.json
@@ -20,34 +20,44 @@
     "require": {
         "php": "^7.2",
         "adam-paterson/oauth2-slack": "^1.1.3",
-        "bugsnag/bugsnag-symfony": "^1.5",
+        "bugsnag/bugsnag-symfony": "dev-symfony-5",
         "jolicode/slack-php-api": "^2.0",
-        "nelmio/security-bundle": "^2.7",
+        "nelmio/security-bundle": "dev-symfony5-simple",
         "nyholm/psr7": "^1.2",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.3",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "^4.4",
-        "symfony/console": "^4.4",
+        "symfony/asset": "^5.0",
+        "symfony/console": "^5.0",
         "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/http-client": "^4.4",
+        "symfony/framework-bundle": "^5.0",
+        "symfony/http-client": "^5.0",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/twig-bundle": "^4.4",
+        "symfony/twig-bundle": "^5.0",
         "twig/twig": "^2.12",
-        "symfony/yaml": "^4.4",
+        "symfony/yaml": "5.0 as 4.4",
         "wohali/oauth2-discord-new": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
-        "symfony/browser-kit": "^4.4",
-        "symfony/css-selector": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/phpunit-bridge": "^4.4",
-        "symfony/stopwatch": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4",
+        "symfony/browser-kit": "^5.0",
+        "symfony/css-selector": "^5.0",
+        "symfony/dotenv": "^5.0",
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/stopwatch": "^5.0",
+        "symfony/web-profiler-bundle": "^5.0",
         "symfony/web-server-bundle": "~4.4"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/pyrech/bugsnag-symfony"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/damienalexandre/NelmioSecurityBundle"
+        }
+    ],
     "config": {
         "preferred-install": {
             "*": "dist"
