Finishing Zoom support with proper tokens and API calls

--- a/.env.dist
+++ b/.env.dist
@@ -14,6 +14,10 @@ REDIS_URL=
 BUGSNAG_KEY=
 BUGSNAG_STAGE=development
 
+ZOOM_CLIENT_ID=
+ZOOM_CLIENT_SECRET=
+ZOOM_BOT_JID=
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
