Fixed composer.json and validate it in the CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ cache:
 install: composer install --prefer-dist --no-interaction
 
 script:
+    - composer validate
     - make test
     - make cs_dry_run
 
